# small-clinic-management-system-DS-Lab

./: Appointment.cpp  Appointment.h  AppointmentQueue.cpp  AppointmentQueue.h  CMakeLists.txt  Clinic.cpp  Clinic.h  Doctor.cpp  Doctor.h  DoctorList.cpp  DoctorList.h  GUI.cpp  GUI.h  LICENSE  MenuSystem.cpp  MenuSystem.h  Patient.cpp  Patient.h  PatientList.cpp  PatientList.h  README.md  build.sh  main.cpp  main_gui.cpp
data/: appointments.txt  doctors.txt
